[gd_scene load_steps=4 format=3 uid="uid://dwob74kj32y7y"]

[ext_resource type="Script" path="res://scenes/battlefield/dog_tower/gun/gun.gd" id="1_eejsn"]
[ext_resource type="Texture2D" uid="uid://bxv6vquc0mpo8" path="res://scenes/characters/dogs/sword_dog/sword_dog.png" id="1_i32up"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_putxp"]
size = Vector2(2000, 1000)

[node name="Gun" type="Node2D"]
script = ExtResource("1_eejsn")

[node name="AttackCooldownTimer" type="Timer" parent="."]
process_callback = 0
one_shot = true

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(64, -57)
texture = ExtResource("1_i32up")
vframes = 17
region_rect = Rect2(4, 4, 178, 185)

[node name="AttackArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="AttackCollisionShape" type="CollisionShape2D" parent="AttackArea"]
shape = SubResource("RectangleShape2D_putxp")

[connection signal="body_entered" from="AttackArea" to="." method="_on_attack_area_body_entered"]
